--- a/resources/templates/recipe.html
+++ b/resources/templates/recipe.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>{{name}}-dashboard</title>
+	<title>{{name}}-recipe</title>
 	<link rel="icon" href="data:,">
-	<link rel="stylesheet" href="/assets/css/dashboard.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="/assets/css/recipe.css" type="text/css" media="screen" />
 	<style>
 	 .button{
 	     @apply w-full border-gray-300 rounded-lg shadow-sm focus:border-accent focus:ring-accent;
@@ -82,7 +82,7 @@
 		</div>
 	    </div>
 	</div>
-	
+	<div id="app" dir="ltr"></div>
 	<div class="bg-yellow-200"> Salam Sailor</div>
 	</article>
 	<footer class="flex flex-row justify-center w-full py-4 bg-accent2 text-white font-amiri font-semibold leading-3">
@@ -91,6 +91,7 @@
 	<div id="data" class="hidden">
 	    {{recipes|json}}
 	</div>
+	<script type="text/javascript" src="/assets/js/recipe.js"></script>
 	<script>
 	 let data = JSON.parse(document.getElementById("data").innerHTML);
 	 
