--- a/resources/templates/recipe.html
+++ b/resources/templates/recipe.html
@@ -33,11 +33,23 @@
 			 data-type="img">
 			<div class="bg-gradient-to-b from-transparent via-10% via-black/60 to-black h-full px-4 py-8">
 			    <span class="text-white px-10 pt-24 block">
-				{{recipe.description}}    
+				{{recipe.description}}
 			    </span>
 			</div>
 		    </div>
-		    {% endfor %}    
+		    {% endfor %}
+		    <div class="shrink-0 bg-cover bg-center w-full pt-[50%]"
+			 style="background-image:url('/assets/img/food.jpg');"
+			 data-type="img">
+			<div class="bg-gradient-to-b from-transparent via-10% via-black/60 to-black h-full px-4 py-8">
+			    <!-- https://pixabay.com/illustrations/food-sambal-dish-egg-stir-fried-7382109/ -->
+			    <span class="text-white px-10 pt-24 block">
+				صحة وهنا 🫶
+				<br/>
+				بحب اسمع رايكم
+			    </span>
+			</div>
+		    </div>
 		</div>
 		<button id="prevBtn" class="absolute right-2 top-1/2 -translate-y-1/2 bg-white/50 h-20">
 		    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right"><path d="m9 18 6-6-6-6"/></svg>
@@ -47,10 +59,10 @@
 		    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left"><path d="m15 18-6-6 6-6"/></svg>
 		</button>
 	    </div>
-	    
-	    
+
+
 	</main>
-	<div class="bg-transparent"> Salam Sailor</div>
+	<div class="bg-yellow-200"> Salam Sailor</div>
 	<footer class="flex flex-row justify-center w-full py-4 bg-accent2 text-white font-amiri font-semibold leading-3">
 	    سليم خطيب
 	</footer>
