--- a/resources/templates/make.html
+++ b/resources/templates/make.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>{{name}}-recipe</title>
+	<title>{{name}}-make recipe</title>
 	<link rel="icon" href="data:,">
 	<link rel="stylesheet" href="/assets/css/recipe.css" type="text/css" media="screen" />
 	<style>
