--- a/resources/templates/dashboard.html
+++ b/resources/templates/dashboard.html
@@ -20,7 +20,7 @@
     <body class="flex flex-col sm:w-full md:w-1/2 md:mx-auto min-h-screen relative">
 	<header class="flex flex-row justify-between px-4 py-2 bg-secondery">
 	    <span class="font-amiri text-lg">أطباق سُهيل</span>
-	    <div class="block mx-auto rounded-full sm:mx-0 sm:shrink-0">
+	    <div class="block rounded-full sm:mx-0 sm:shrink-0">
 		{% if avatar-url|empty? %}
 		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
 		{% else %}
