--- a/resources/templates/make.html
+++ b/resources/templates/make.html
@@ -9,13 +9,7 @@
     <link rel="stylesheet" href="/assets/css/make.css" type="text/css" media="screen" />
 </head>
 <body>
-    <!-- <div class="sr-only">
-	 <label for="media-file">حمل صورة</label>
-	 <input name="media" id="media-file" type="file" accept="image/jpeg,image/png"  />
-	 <label for="desc">شرح عن الوصفة</label>
-	 <input id="desc" name="description" type="text"/>
-	 <button id="btn">انشرها</button>
-	 </div> -->
+    <a href="/dashboard">dashboard</a>
     <div id="app"></div>
     <svg>
 	<symbol id="plus" viewBox="0 0 24 24">
