--- a/resources/templates/dashboard.html
+++ b/resources/templates/dashboard.html
@@ -17,7 +17,7 @@
 	 /* class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 pl-5 border-2 border-black" */
 	</style>
     </head>
-    <body class="flex flex-col sm:w-full md:w-1/2 md:mx-auto min-h-screen relative">
+    <body class="red-brown flex flex-col sm:w-full md:w-1/2 md:mx-auto min-h-screen relative">
 	<header class="flex flex-row justify-between px-4 py-2 bg-secondery">
 	    <span class="font-amiri text-lg">أطباق سُهيل</span>
 	    <div class="block rounded-full sm:mx-0 sm:shrink-0">
@@ -28,93 +28,105 @@
 		{% endif %}
 	    </div>
 	</header>
-	<div class="w-full">
-		مرحبا <span>{{name}}</span> سعدنا بوجودك معنا
-	</div>
 	<div class="grow space-y-2 my-2 shadow-md rounded-xl px-2 py-2">
-		<div class="flex items-center justify-between">
-		    <div class="flex  items-center space-x-2">
-			<input class="flex rounded-md border border-input bg-background px-3 py-1 text-sm shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 h-8 w-[150px] lg:w-[250px]"
-			       name="recipe" type="text" value=""/>
-		    </div>
-		    <a
-			href="/recipes/make"
-class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background border border-input hover:bg-accent2 hover:text-white h-10 w-10">
-			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plus"><line x1="12" x2="12" y1="5" y2="19"/><line x1="5" x2="19" y1="12" y2="12"/>
-			</svg>
-		    </a>
+	    <div class="flex items-center justify-between">
+		<div class="flex items-center gap-4 ">
+		    <input class="flex rounded-md border border-input bg-background px-3 py-1 text-sm shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 h-9 w-[150px] lg:w-[250px]"
+			   id="filter-name" name="recipe" type="text" value="" place-holder="انتقي الوصفات حسب الاسم" />
+		    <button
+			class="mx-4 inline-flex items-center justify-center rounded-md text-sm font-medium bg-secondery text-black shadow hover:bg-primary/90 hover:text-white focus:bg-grass focus:text-white h-9 px-4 py-2 border-2 border-black"
+			type="button" id="delete-btn">
+			احذف الوصفات
+		    </button>
 		</div>
-		<div class="rounded-md border">
-		    <div class="w-full overflow-auto">
-			<table class="w-full caption-bottom text-sm">
-			    <thead class="[&_tr]:border-b">
-				<tr class="hover:bg-slate-200">
-				    <th class="w-5 h-8 px-2 text-left align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0 [&amp;>[role=checkbox]]:translate-y-[2px]">
-					<button type="button" role="checkbox" aria-checked="true" data-state="checked" value="on"
-						class="peer h-5 w-5 shrink-0 rounded-sm border border-accent2 shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-accent2 data-[state=checked]:text-white translate-y-[2px]" aria-label="Select all">
-					    <span data-state="checked" class="flex items-center justify-center text-current" style="pointer-events: none;">
-						<svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="h-4 w-4">
-						    <use href="checkmark"></use>
-						</svg>
-					    </span>
-					</button>
-				    </th>
-				    <th class="h-8 px-2 text-right align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0 [&amp;>[role=checkbox]]:translate-y-[2px]">
-					<div class="">وصفة</div>
-				    </th>
-				</tr>
-			    </thead>
-			    <tbody class="[&_tr:last-child]:border-0">
-				{% for recipe in recipes %}
-				<tr class="hover:bg-slate-200">
-				    <td class="w-5 h-10 px-2 text-left align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0 [&amp;>[role=checkbox]]:translate-y-[2px]">
-					<button type="button" role="checkbox" aria-checked="false" data-state="unchecked" value="off"
-						class="peer h-5 w-5 shrink-0 rounded-sm border border-accent2 shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-accent2 data-[state=checked]:text-white translate-y-[2px]"
-						aria-label="Select all">
-					    <!-- <span data-state="checked" class="flex items-center justify-center text-current" style="pointer-events: none;"><svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="h-4 w-4"><path d="M11.4669 3.72684C11.7558 3.91574 11.8369 4.30308 11.648 4.59198L7.39799 11.092C7.29783 11.2452 7.13556 11.3467 6.95402 11.3699C6.77247 11.3931 6.58989 11.3355 6.45446 11.2124L3.70446 8.71241C3.44905 8.48022 3.43023 8.08494 3.66242 7.82953C3.89461 7.57412 4.28989 7.55529 4.5453 7.78749L6.75292 9.79441L10.6018 3.90792C10.7907 3.61902 11.178 3.53795 11.4669 3.72684Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path></svg></span> -->
-					</button>
-				    </td>
-				    <td class="h-10 px-2 text-right align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pl-0 [&amp;>[role=checkbox]]:translate-y-[2px]">
-					<div class="">{{recipe.name}} - {{recipe.description}}</div>
-				    </td>
-				    <td class="h-10 px-2 text-right align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pl-0 [&amp;>[role=checkbox]]:translate-y-[2px]">
-					<a href="{{recipe.link|default:#}}">{{recipe.recipe-id}}</a>
-				    </td>
-				</tr>
-				{% endfor %}
-				
-			    </tbody>
-			</table>
-		    </div>
+		
+		<a
+		    href="/recipes/make"
+		    class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background border border-input hover:bg-accent2 hover:text-white h-10 w-10">
+		    <svg width="24px" height="24px" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+			<use href="#plus"></use>
+		    </svg>
+		</a>
+	    </div>
+	    <div class="rounded-md border">
+		<div class="w-full overflow-auto">
+		    <table class="w-full caption-bottom text-sm">
+			<thead class="[&_tr]:border-b">
+			    <tr class="hover:bg-slate-200">
+				<th class="w-5 h-8 px-2 text-left align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0 [&amp;>[role=checkbox]]:translate-y-[2px]">
+				    
+				</th>
+				<th class="h-8 px-2 text-right align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0 [&amp;>[role=checkbox]]:translate-y-[2px]">
+				    <div>وصفة</div>
+				</th>
+				<th class="h-8 px-2 text-right align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0 [&amp;>[role=checkbox]]:translate-y-[2px]">
+				    <div>رابط الوصفة</div>
+				</th>
+				<th class="h-8 px-2 text-center align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0 [&amp;>[role=checkbox]]:translate-y-[2px]">
+				    <div>إنسخ الرابط</div>
+				</th>
+			    </tr>
+			</thead>
+			<tbody class="[&_tr:last-child]:border-0" id="table-body">
+			    {% for recipe in recipes %}
+			    <tr class="hover:bg-slate-200" id="{{recipe.recipe-id}}" data-recipe-name="{{recipe.name}}" data-recipe-id="{{recipe.recipe-id}}">
+				<td class="w-5 h-10 px-2 text-left align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pr-0 [&amp;>[role=checkbox]]:translate-y-[2px]">
+				    <button
+					class="checkbox-btn h-5 w-5 shrink-0 rounded-sm border border-accent2 shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-accent2 data-[state=checked]:text-white translate-y-[2px]"
+					type="button" role="checkbox" aria-checked="false" data-state="unchecked" value="off">
+					<svg width="15" height="15" viewBox="0 0 15 15" fill="none">
+					    <use class="hidden" href="#checkmark"></use>
+					</svg>
+				    </button>
+				</td>
+				<td class="h-10 px-2 text-right align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pl-0 [&amp;>[role=checkbox]]:translate-y-[2px]">
+				    <div>{{recipe.name}} - {{recipe.description}}</div>
+				</td>
+				<td class="h-10 px-2 text-right align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pl-0 [&amp;>[role=checkbox]]:translate-y-[2px]">
+				    <a href="{{recipe.link|default:#}}">{{recipe.recipe-id}}</a>
+				</td>
+				<td class="h-12 px-2 text-center align-middle font-medium text-muted-foreground [&amp;:has([role=checkbox])]:pl-0 [&amp;>[role=checkbox]]:translate-y-[2px]">
+				    <button class="clipboard-btn relative" type="button" data-recipe-link="{{recipe.link|default:#}}">
+					<svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+						    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+					    <use href="#clipboard"></use>
+					</svg>
+				    </button>
+				</td>
+			    </tr>
+			    {% endfor %}
+
+			</tbody>
+		    </table>
 		</div>
 	    </div>
-	    <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" class="h-4 w-4">
-		<symbol id="checkmark" viewBox="0 0 15 15">
-		    <path d="M11.4669 3.72684C11.7558 3.91574 11.8369 4.30308 11.648 4.59198L7.39799 11.092C7.29783 11.2452 7.13556 11.3467 6.95402 11.3699C6.77247 11.3931 6.58989 11.3355 6.45446 11.2124L3.70446 8.71241C3.44905 8.48022 3.43023 8.08494 3.66242 7.82953C3.89461 7.57412 4.28989 7.55529 4.5453 7.78749L6.75292 9.79441L10.6018 3.90792C10.7907 3.61902 11.178 3.53795 11.4669 3.72684Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path>
-		</symbol>
-	    </svg>
-	    <div class="bg-yellow-200"> Salam Sailor</div>
+	</div>
 	<footer class="flex flex-row justify-center w-full py-4 bg-accent2 text-white font-amiri font-semibold leading-3">
 	    سليم خطيب
 	</footer>
-
+	<svg class="hidden">
+	    <symbol id="checked-clipboard" viewBox="0 0 24 24">
+		<rect width="8" height="4" x="8" y="2" rx="1" ry="1"/><path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"/><path d="m9 14 2 2 4-4"/>
+	    </symbol>
+	    <symbol id="clipboard" viewBox="0 0 24 24">
+		<rect width="8" height="4" x="8" y="2" rx="1" ry="1"/>
+		<path d="M8 4H6a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-2"/>
+		<path d="M16 4h2a2 2 0 0 1 2 2v4"/><path d="M21 14H11"/><path d="m15 10-4 4 4 4"/>
+	    </symbol>
+	    <symbol id="plus" viewBox="0 0 24 24">
+		<line x1="12" x2="12" y1="5" y2="19"/><line x1="5" x2="19" y1="12" y2="12"/>
+	    </symbol>
+	    <symbol id="checkmark" viewBox="0 0 15 15">
+		<path d="M11.4669 3.72684C11.7558 3.91574 11.8369 4.30308 11.648 4.59198L7.39799 11.092C7.29783 11.2452 7.13556 11.3467 6.95402 11.3699C6.77247 11.3931 6.58989 11.3355 6.45446 11.2124L3.70446 8.71241C3.44905 8.48022 3.43023 8.08494 3.66242 7.82953C3.89461 7.57412 4.28989 7.55529 4.5453 7.78749L6.75292 9.79441L10.6018 3.90792C10.7907 3.61902 11.178 3.53795 11.4669 3.72684Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path>
+	    </symbol>
+	</svg>
 	<script id="data" type="application/json">
 	 {{recipes|json|safe}}
 	</script>
 	
+	<script type="text/javascript" src="/assets/js/dashboard.js"></script>
 	<script>
-	 /* let data = JSON.parse(document.getElementById("data").innerHTML); */
-	 let data = JSON.parse(document.getElementById("data").text);
-	 console.log(data);
+	 
 	</script>
-	<!-- <script id="refresh-token" type="application/json">
-	     {{refresh-token}}
-	     </script> -->
-	<!-- <div id="data" class="hidden">
-	     {{recipes|json}}
-	     </div> -->
-	<!-- <div id="app"></div>
-	     <script src="/js/register.js"></script>
-	-->
     </body>
 </html>
