--- a/resources/templates/recipe.html
+++ b/resources/templates/recipe.html
@@ -19,10 +19,12 @@
     </head>
     <body class="flex flex-col sm:w-full md:w-1/2 md:mx-auto min-h-screen relative">
 	<header class="flex flex-row justify-between px-4 py-2 bg-secondery">
-	    <span class="font-amiri text-lg">أطباق سُهيل</span>
-	    <div class="block rounded-full sm:mx-0 sm:shrink-0">
-		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chef-hat"><path d="M6 13.87A4 4 0 0 1 7.41 6a5.11 5.11 0 0 1 1.05-1.54 5 5 0 0 1 7.08 0A5.11 5.11 0 0 1 16.59 6 4 4 0 0 1 18 13.87V21H6Z"/><line x1="6" x2="18" y1="17" y2="17"/></svg>
-	    </div>
+	    <a href="/" alt="الصفحة الرئيسية"><span class="font-amiri text-lg">أطباق سُهيل</span></a>
+	    <a href="/" alt="الصفحة الرئيسية">
+		<div class="block rounded-full sm:mx-0 sm:shrink-0">
+		    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chef-hat"><path d="M6 13.87A4 4 0 0 1 7.41 6a5.11 5.11 0 0 1 1.05-1.54 5 5 0 0 1 7.08 0A5.11 5.11 0 0 1 16.59 6 4 4 0 0 1 18 13.87V21H6Z"/><line x1="6" x2="18" y1="17" y2="17"/></svg>
+		</div>
+	    </a>
 	</header>
 	<main id="app" class="grow flex">
 	    <div class="carousel-container w-full basis-full relative overflow-hidden">
@@ -64,7 +66,6 @@
 
 
 	</main>
-	<div class="bg-yellow-200"> Salam Sailor</div>
 	<footer class="flex flex-row justify-center w-full py-4 bg-accent2 text-white font-amiri font-semibold leading-3">
 	    سليم خطيب
 	</footer>
