--- a/resources/templates/signup.html
+++ b/resources/templates/signup.html
@@ -25,8 +25,8 @@
 	    </div>
 	</header>
 	<article class="grow">
-	    تم التسجيل بنجاح. الرجاء الانتظار للوصول للصفحة التحكم
-	    <div class="bg-yellow-200"> Salam Sailor</div>    
+	    تم التسجيل بنجاح. الرجاء الانتظار للوصول للصفحة التحكم او الضغط
+	    <a href="/dashboard">هنا</a>
 	</article>
 	
 	<footer class="flex flex-row justify-center w-full py-4 bg-accent2 text-white font-amiri font-semibold leading-3">
